--- a/style/style.css
+++ b/style/style.css
@@ -33,12 +33,13 @@ body {
 .map {
   overflow: hidden;
   height: 60vh;
-  width: 90vw;
+  width: clamp(280px, 50vw, 50vw);
   margin: 20px;
   opacity: 0;
   transition: opacity 2s ease-out;
   border-radius: 20px;
 }
+
 .marker {
   background-image: url("../images/marker.png");
   background-repeat: no-repeat;
